k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies-ingress
  namespace: movies-recommendation
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "movies-static-ip"
spec:
  rules:
    - http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /movies
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /bookmarks
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
